--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-
     "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.6.8",
     "http-proxy-middleware": "^3.0.0",
@@ -14,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -29,7 +29,6 @@
     ]
   },
   "proxy": "http://3.39.11.243:8080",
-
   "browserslist": {
     "production": [
       ">0.2%",
